--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -80,8 +80,7 @@
       <h2>Visualization</h2>
       <canvas id="treeCanvas" width="600" height="400"></canvas>
       <div class="controls">
-        <button onclick="insertNode(prompt('Enter value to insert:'))">Insert</button>
-        <button onclick="deleteNode(prompt('Enter value to delete:'))">Delete</button>
+        <button onclick="generateTree()">Generate Tree</button>
         <button onclick="clearTree()">Clear Tree</button>
       </div>
     </section>
