--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="data-structures/linked-list.html" class="data-structure-link">Linked List</a>
       <a href="data-structures/array.html" class="data-structure-link">Array</a>
       <a href="data-structures/hash-table.html" class="data-structure-link">Hash-Table</a>
-      <a href="data-structures/tree.html" class="data-structure-link">Tree</a>
+      <a href="data-structures/tree.html" class="data-structure-link">Binary Tree</a>
       <a href="data-structures/graph.html" class="data-structure-link">Graph</a>
     </div>
     <div class="site-name">@Data Structures Visualization</div>
