--- a/footer.html
+++ b/footer.html
@@ -17,8 +17,8 @@
         <a href="../data-structures/linked-list.html" class="data-structure-link">Linked List</a>
         <a href="../data-structures/array.html" class="data-structure-link">Array</a>
         <a href="../data-structures/hash-table.html" class="data-structure-link">Hash Table</a>
-        <a href="../data-structures/heap.html" class="data-structure-link">Heap</a>
-        <a href="../data-structures/tree.html" class="data-structure-link">Tree</a>
+        <a href="../data-structures/graph.html" class="data-structure-link">Graph</a>
+        <a href="../data-structures/tree.html" class="data-structure-link">Binary Tree</a>
       </div>
       <div class="site-name">@Data Structures Visualization</div>
     </header>
