--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -81,9 +81,9 @@
     <section class="box">
       <h2>Operations</h2>
       <ul>
-        <li>Access by index.</li>
-        <li>Insert and delete at specific positions.</li>
-        <li>Traversal to process all elements.</li>
+        <li><span class="highlight_low">Access</span> by index.</li>
+        <li><span class="highlight_low">Insert</span> and delete at specific positions.</li>
+        <li><span class="highlight_low">Traversal</span> to process all elements.</li>
       </ul>
     </section>
 
