--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -77,9 +77,9 @@
     <section class="box">
       <h2>Operations</h2>
       <ul>
-        <li>Insert: Add a key-value pair.</li>
-        <li>Search: Find a value by its key.</li>
-        <li>Delete: Remove a key-value pair.</li>
+        <li><span class="highlight_low">Insert</span>: Add a key-value pair.</li>
+        <li><span class="highlight_low">Search</span>: Find a value by its key.</li>
+        <li><span class="highlight_low">Delete</span>: Remove a key-value pair.</li>
       </ul>
     </section>
 
