--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -77,9 +77,9 @@
     <section class="box">
       <h2>Operations</h2>
       <ul>
-        <li><b>Insert at Head:</b> Adds a new node to the beginning of the list.</li>
-        <li><b>Delete by Value:</b> Removes a node containing a specified value.</li>
-        <li><b>Traverse:</b> Iterates through the linked list to access each element.</li>
+        <li><span class="highlight_low">Insert</span> at Head: Adds a new node to the beginning of the list.</li>
+        <li><span class="highlight_low">Delete</span> by Value: Removes a node containing a specified value.</li>
+        <li><span class="highlight_low">Traverse</span>: Iterates through the linked list to access each element.</li>
       </ul>
     </section>
 
