--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -77,9 +77,9 @@
     <section class="box">
       <h2>Operations</h2>
       <ul>
-        <li>Push: Add an element to the stack.</li>
-        <li>Pop: Remove the top element from the stack.</li>
-        <li>Peek: View the top element of the stack without removing it.</li>
+        <li><span class="highlight_low">Push</span>: Add an element to the stack.</li>
+        <li><span class="highlight_low">Pop</span>: Remove the top element from the stack.</li>
+        <li><span class="highlight_low">Peek</span>: View the top element of the stack without removing it.</li>
       </ul>
     </section>
 
