--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -76,9 +76,9 @@
     <section class="box">
       <h2>Operations</h2>
       <ul>
-        <li>Enqueue: Add an element to the rear.</li>
-        <li>Dequeue: Remove an element from the front.</li>
-        <li>Peek: View the front element without removing it.</li>
+        <li><span class="highlight_low">Enqueue</span>: Add an element to the rear.</li>
+        <li><span class="highlight_low">Dequeue</span>: Remove an element from the front.</li>
+        <li><span class="highlight_low">Peek</span>: View the front element without removing it.</li>
       </ul>
     </section>
 
