--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -88,7 +88,7 @@
       <h2>Visualization</h2>
       <p class="coming-soon">
     Maybe later! 😊<br>
-    In the meantime, you can see it in this <a href="https://www.youtube.com/watch?v=0Xv6wSguIlQ" target="_blank">short and clear video</a>.
+    In the meantime, you can see it in this <a href="https://www.youtube.com/watch?v=0Xv6wSguIlQ" target="_blank">video</a>.
   </p>
 </section>
   </main>
