--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -91,6 +91,38 @@
     In the meantime, you can see it in this <a href="https://www.youtube.com/watch?v=0Xv6wSguIlQ" target="_blank">video</a>.
   </p>
 </section>
-  </main>
+
+<section class="box">
+  <h2>Advantages and Disadvantages</h2>
+  <div class="pros-cons">
+    <div class="advantages">
+      <p>✅ Fast lookup, insertion, and deletion (average O(1)).</p>
+      <p>✅ Simple implementation with an efficient hash function.</p>
+      <p>✅ Great for storing key-value pairs.</p>
+    </div>
+    <div class="disadvantages">
+      <p>❌ Inefficient for ordered data retrieval.</p>
+      <p>❌ Collisions reduce performance (depends on handling method).</p>
+      <p>❌ Requires good hash functions for efficiency.</p>
+    </div>
+  </div>
+</section>
+
+<section class="box">
+  <h2>Possible Implementations</h2>
+  <div class="implementations">
+    <div class="circle implementation-icon">
+      <p>Chaining</p>
+    </div>
+    <div class="circle implementation-icon">
+      <p>Open Addressing</p>
+    </div>
+    <div class="circle implementation-icon">
+      <p>Double Hashing</p>
+    </div>
+  </div>
+</section>
+</main>
+
 </body>
 </html>
