--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -84,16 +84,7 @@
       <h2>Visualization</h2>
       <p>Enter edges in the format: [[1,2],[2,3],[3,1]]</p>
       <label for="graph-input">Enter Edges:</label>
-      <input
-        type="text"
-        id="graph-input"
-        placeholder="e.g., [[1,2],[2,3],[3,1]]"
-      />
-      <label for="graph-type">Graph Type:</label>
-      <select id="graph-type">
-        <option value="directed">Directed</option>
-        <option value="undirected">Undirected</option>
-      </select>
+      <input type="text" id="graph-input" placeholder="e.g., [[1,2],[2,3],[3,1]]" />
       <button onclick="generateGraph()">Generate Graph</button>
       <button onclick="clearGraph()">Clear Graph</button>
       <canvas id="graphCanvas" width="600" height="400"></canvas>
