--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -82,6 +82,7 @@
     <!-- Visualization Section -->
     <section class="visualization box">
       <h2>Visualization</h2>
+      <p>Visualization of an undirected graph</p>
       <p>Enter edges in the format: [[1,2],[2,3],[3,1]]</p>
       <label for="graph-input">Enter Edges:</label>
       <input type="text" id="graph-input" placeholder="e.g., [[1,2],[2,3],[3,1]]" />
@@ -108,19 +109,19 @@
     </section>
 
     <section class="box">
-  <h2>Possible Implementations</h2>
-  <div class="implementations">
-    <div class="circle implementation-icon">
-      <p>Chaining</p>
-    </div>
-    <div class="circle implementation-icon">
-      <p>Open Addressing</p>
-    </div>
-    <div class="circle implementation-icon">
-      <p>Double Hashing</p>
-    </div>
-  </div>
-</section>
+      <h2>Possible Implementations</h2>
+      <div class="implementations">
+        <div class="circle implementation-icon">
+          <p>Adjacency List</p>
+        </div>
+        <div class="circle implementation-icon">
+          <p>Adjacency Matrix</p>
+        </div>
+        <div class="circle implementation-icon">
+          <p>Incidence Matrix</p>
+        </div>
+      </div>
+    </section>
   </main>
 
   <!-- Scripts -->
