--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -31,7 +31,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>An array is a collection of items stored at contiguous memory locations. It allows random access and manipulation of data elements.</p>
+      <p>An array is a <span class="highlight_low">collection of items</span> stored at contiguous memory locations. It allows random access and manipulation of data elements.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
