--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -32,7 +32,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Graph is a collection of nodes (or vertices) connected by edges. It can be directed or undirected, weighted or unweighted.</p>
+      <p>A Graph is a <span class="highlight_low">collection of nodes</span> (or vertices) connected by edges. It can be <span class="highlight_strong">directed</span> or <span class="highlight_strong">undirected</span>, <span class="highlight_strong">weighted</span> or <span class="highlight_strong">unweighted</span>.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
