--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -33,7 +33,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Hash Table is a data structure that stores data in key-value pairs. It uses a hash function to compute the index of the data in an array.</p>
+      <p>A Hash Table is a data structure that stores data in <span class="highlight_low">key-value pairs</span>. It uses a hash function to compute the index of the data in an array.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
