--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -32,7 +32,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Linked List is a linear data structure where each element is a node. Each node contains a value and a reference to the next node in the sequence. Linked Lists allow for dynamic memory allocation and efficient insertion or deletion operations.</p>
+      <p>A Linked List is a linear data structure where each element is a node. <span class="highlight_low">Each node contains a value</span> and a <span class="highlight_low">reference to the next node</span> in the sequence. Linked Lists allow for dynamic memory allocation and efficient insertion or deletion operations.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
@@ -66,7 +66,7 @@
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
-        <li>Dynamic size: Can grow or shrink as needed.</li>
+        <li><span class="highlight_low">Dynamic size</span>: Can grow or shrink as needed.</li>
         <li>Efficient insertions and deletions.</li>
         <li>Memory overhead due to storing references/pointers.</li>
         <li>Linear traversal time for search operations.</li>
