--- a/data-structures/queue.html
+++ b/data-structures/queue.html
@@ -32,7 +32,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Queue is a First-In-First-Out (FIFO) data structure. Elements are added at the rear and removed from the front.</p>
+      <p>A Queue is a <span class="highlight_low">First-In-First-Out (FIFO)</span> data structure. Elements are added at the rear and removed from the front.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
