--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -30,8 +30,8 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A <span class="highlight_strong">Binary Tree</span> is a hierarchical data structure where each node has at most two children: a left child and a right child.</p>
-      <p>A <span class="highlight_strong">Binary Search Tree (BST)</span> is a special type of Binary Tree where the left child contains values less than the parent node, and the right child contains values greater than the parent node. BSTs are commonly used for efficient searching and sorting.</p>
+      <p>A <span class="highlight_strong">Binary Tree</span> is a hierarchical data structure where each node has at most <span class="highlight_low">two children</span>: a left child and a right child.</p>
+      <p>A <span class="highlight_strong">Binary Search Tree (BST)</span> is a special type of Binary Tree where the left child contains values <span class="highlight_low">less</span> than the parent node, and the right child contains values <span class="highlight_low">greater</span> than the parent node. BSTs are commonly used for efficient searching and sorting.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
