--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -31,7 +31,7 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Stack is a Last-In-First-Out (LIFO) data structure where the last element added is the first to be removed.</p>
+      <p>A Stack is a <span class="highlight_low">Last-In-First-Out (LIFO)</span> data structure where the last element added is the first to be removed.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
