--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -65,7 +65,7 @@
         </tbody>
       </table>
       <p class="note">
-        <strong>Note:</strong> <em>V</em> represents the number of vertices, and <em>E</em> represents the number of edges in the graph.
+        <strong>Note:</strong> <em><span class="highlight_low">V</span></em> represents the number of vertices, and <em><span class="highlight_low">E</span></em> represents the number of edges in the graph.
       </p>
     </section>
 
@@ -82,7 +82,7 @@
     <!-- Visualization Section -->
     <section class="visualization box">
       <h2>Visualization</h2>
-      <p>Visualization of an undirected graph</p>
+      <p>Visualization of an <span class="highlight_strong">undirected graph</span></p>
       <p>Enter edges in the format: [[1,2],[2,3],[3,1]]</p>
       <label for="graph-input">Enter Edges:</label>
       <input type="text" id="graph-input" placeholder="e.g., [[1,2],[2,3],[3,1]]" />
