--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -30,8 +30,8 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A <span class="highlight_strong">Binary Tree</span> is a hierarchical data structure where each node has at most <span class="highlight_low">two children</span>: a left child and a right child.</p>
-      <p>A <span class="highlight_strong">Binary Search Tree (BST)</span> is a special type of Binary Tree where the left child contains values <span class="highlight_low">less</span> than the parent node, and the right child contains values <span class="highlight_low">greater</span> than the parent node. BSTs are commonly used for efficient searching and sorting.</p>
+      <p>- A <span class="highlight_strong">Binary Tree</span> is a hierarchical data structure where each node has at most <span class="highlight_low">two children</span>: a left child and a right child.</p>
+      <p>- A <span class="highlight_strong">Binary Search Tree (BST)</span> is a special type of Binary Tree where the left child contains values <span class="highlight_low">less</span> than the parent node, and the right child contains values <span class="highlight_low">greater</span> than the parent node. BSTs are commonly used for efficient searching and sorting.</p>
     </section>
 
     <!-- Time and Space Complexity Section -->
@@ -117,6 +117,30 @@
         </div>
       </div>
     </section>
+
+    <!-- Possible Implementations Section -->
+    <section class="box">
+    <h2>Possible Implementations</h2>
+    <div class="implementations">
+      <div class="circle implementation-icon">
+        <div class="icon" style="background-image: url('../assets/icons/array.svg');"></div>
+        <p>Array</p>
+      </div>
+      <div class="circle implementation-icon">
+        <div class="icon" style="background-image: url('../assets/icons/linked-list.svg');"></div>
+        <p>Linked List</p>
+      </div>
+      <div class="circle implementation-icon">
+        <div class="icon" style="background-image: url('../assets/icons/tree-bst.svg');"></div>
+        <p>Binary Search Tree</p>
+      </div>
+      <div class="circle implementation-icon">
+        <div class="icon" style="background-image: url('../assets/icons/heap.svg');"></div>
+        <p>Heap</p>
+      </div>
+    </div>
+    </section>
+
 
   <!-- Scripts -->
   <script src="../scripts/visualizations/tree.js" defer></script>
