--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -66,7 +66,7 @@
     <section class="box">
       <h2>Properties</h2>
       <ul class="spaced-list">
-        <li><span class="highlight_low">Dynamic size</span>: Can grow or shrink as needed.</li>
+        <li>Dynamic size: Can grow or shrink as needed.</li>
         <li>Efficient insertions and deletions.</li>
         <li>Memory overhead due to storing references/pointers.</li>
         <li>Linear traversal time for search operations.</li>
