--- a/data-structures/tree.html
+++ b/data-structures/tree.html
@@ -131,7 +131,7 @@
         <p>Linked List</p>
       </div>
       <div class="circle implementation-icon">
-        <div class="icon" style="background-image: url('../assets/icons/tree-bst.svg');"></div>
+        <div class="icon" style="background-image: url('../assets/icons/binary-tree.svg');"></div>
         <p>Binary Search Tree</p>
       </div>
       <div class="circle implementation-icon">
