--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -115,9 +115,15 @@
           <p>Adjacency List</p>
         </div>
         <div class="circle implementation-icon">
+          <div class="icon" style="background-image: url('../assets/icons/adjacency-list.svg');"></div>
+          <p>Adjacency List</p>
+        </div>
+        <div class="circle implementation-icon">
+          <div class="icon" style="background-image: url('../assets/icons/matrix.svg');"></div>
           <p>Adjacency Matrix</p>
         </div>
         <div class="circle implementation-icon">
+          <div class="icon" style="background-image: url('../assets/icons/matrix.svg');"></div>
           <p>Incidence Matrix</p>
         </div>
       </div>
