--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -116,11 +116,12 @@
     }
       </textarea>
       <button onclick="runCode()">Run</button>
+      <button onclick="copyCode()">Copy</button>
       <pre id="output"></pre>
     </section>
     
 
-    <!-- Advantages and Disadvantages Section -->
+    <!-- Advantages and Disadvantages Section 
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
@@ -135,7 +136,7 @@
           <p>❌ Wasted memory in sparse usage.</p>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Possible Implementations Section -->
     <section class="box">
