--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -115,8 +115,10 @@
         System.out.print(number + " ");
     }
       </textarea>
+      <div class="code-buttons">
       <button onclick="runCode()">Run</button>
       <button onclick="copyCode()">Copy</button>
+      </div>
       <pre id="output"></pre>
     </section>
     
