edit code Example in array

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -100,7 +100,7 @@
     
     <section class="box">
       <h2>Interactive Code Example</h2>
-      <p>Edit the code below and click "Run" to see the result:</p>
+      <p>Edit the code below (in Java) and click "Run" to see the result:</p>
       <textarea id="java-code" class="code-editor">
     // Initialize an array
     int[] numbers = {1, 2, 3, 4, 5};
