edit code Example in all ds

--- a/data-structures/array.html
+++ b/data-structures/array.html
@@ -126,7 +126,7 @@
     </section>    
     
 
-    <!-- Advantages and Disadvantages Section 
+    <!-- Advantages and Disadvantages Section  -->
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
@@ -141,7 +141,7 @@
           <p>❌ Wasted memory in sparse usage.</p>
         </div>
       </div>
-    </section>-->
+    </section>
 
     <!-- Possible Implementations Section -->
     <section class="box">
