--- a/data-structures/hash-table.html
+++ b/data-structures/hash-table.html
@@ -92,6 +92,7 @@
   </p>
 </section>
 
+<!-- Code Example -->
 <section class="box">
   <h2>Interactive Code Example</h2>
   <p>Click "Run" to see the output or "Copy" to copy the code:</p>
