--- a/data-structures/graph.html
+++ b/data-structures/graph.html
@@ -91,6 +91,7 @@
       <canvas id="graphCanvas" width="600" height="400"></canvas>
     </section>
 
+    <!-- Code Example -->
     <section class="box">
       <h2>Interactive Code Example</h2>
       <p>Click "Run" to see the output or "Copy" to copy the code:</p>
