--- a/data-structures/linked-list.html
+++ b/data-structures/linked-list.html
@@ -94,6 +94,7 @@
       </div>
     </section>
 
+    <!-- Code Example -->
     <section class="box">
       <h2>Interactive Code Example</h2>
       <p>Click "Run" to see the output or "Copy" to copy the code:</p>
